--- a/Assignment 2/400.html
+++ b/Assignment 2/400.html
@@ -6,8 +6,9 @@
   <title>400 Bad Request</title>
 </head>
 <body>
-  <h1>L</h1><br>
-  You did something illegal. Now deal with the repurcussions. I must say, peak baller move. 
+  <h1>Error 400: Bad Request</h1><br>
+  <h2>L</h2><br>
+  You did something illegal. Now deal with the repurcussions. I must say tho, peak baller move. 
   <!-- <div>
     <ul>
       <li><b>Go back to the homepage and rethink your life</b><br> Maybe you'll get it right then</li><br>
