--- a/Assignment 2/404.html
+++ b/Assignment 2/404.html
@@ -6,8 +6,9 @@
   <title>Page Not Found</title>
 </head>
 <body>
-  <h1>Well, this is Awkward</h1><br>
-  How tf did you get lost on a site that has, like 4 pages? Kudos. Here's what you could do to solve this.
+  <h1>Error 404: Not Found</h1><br>
+  <h2>Well, this is Awkward</h2>
+  How tf did you get lost on a site that has like, 4 pages? Kudos. Here's what you could do to solve this.
   <div>
     <ul>
       <li><b>Go back to the homepage and rethink your life</b><br> Maybe you'll get it right then</li><br>
